tests/paczka1/fuzzy1/62017982.err
Error in line 5: S51 A123 94,7
Error in line 8: S51 A8 68,5
Error in line 23: S	1 S	1 244,6
Error in line 20: S51 S51 69,5
Error in line 24: S51 S888 0,2
Error in line 35: S51 S51 31,7
Error in line 36: S51 S888 14,1
Error in line 34: meVk S51 41,4
